--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "electron-gopher",
   "version": "1.0.0",
-  "description": "",
+  "description": "Gopher mascot application",
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run dev && electron .",
-    "dev": "webpack --mode=development"
+    "start": "npm run dev && electron dist/main.js",
+    "dev": "webpack --mode=development",
+    "dist": "webpack --mode=production && electron-builder"
+  },
+  "build": {
+    "appId": "org.kofuk.electron-gopher",
+    "files": [
+      "dist/**/*",
+      "node_modules/**/*"
+    ],
+    "linux": {
+      "category": "Game"
+    }
   },
   "keywords": [],
   "author": "",
