Manipulate NSIS build option

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     ],
     "linux": {
       "category": "Game"
+    },
+    "nsis": {
+      "oneClick": false,
+      "deleteAppDataOnUninstall": true
     }
   },
   "keywords": [],
