--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     },
     "nsis": {
       "oneClick": false,
-      "deleteAppDataOnUninstall": true
+      "deleteAppDataOnUninstall": true,
+      "allowToChangeInstallationDirectory" : true,
+      "license": "LICENSE"
     }
   },
   "keywords": [],
