--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nsis": {
       "oneClick": false,
       "deleteAppDataOnUninstall": true,
-      "allowToChangeInstallationDirectory" : true,
+      "allowToChangeInstallationDirectory": true,
       "license": "LICENSE"
     }
   },
@@ -34,8 +34,10 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
     "electron": "^18.0.0",
     "electron-builder": "^22.14.13",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
